Prepare renamed plugin for WordPress.org submission
