# src/rest/newsletter-preview/api-client.ts
@@ -19,7 +19,7 @@ export const readNewsletterPreviewResourceEndpoint = createEndpoint<
   authMode: 'authenticated-rest-nonce',
   method: 'GET',
   operationId: 'readNewsletterPreviewResource',
-  path: '/newspack-listmonk-connector/v1/newsletter-preview/item',
+  path: '/connector-for-newspack-newsletters-and-listmonk/v1/newsletter-preview/item',
   requestLocation: 'query',
   validateRequest: apiValidators.readQuery,
   validateResponse: apiValidators.readResponse,
@@ -40,7 +40,7 @@ export const createNewsletterPreviewResourceEndpoint = createEndpoint<
   authMode: 'authenticated-rest-nonce',
   method: 'POST',
   operationId: 'createNewsletterPreviewResource',
-  path: '/newspack-listmonk-connector/v1/newsletter-preview',
+  path: '/connector-for-newspack-newsletters-and-listmonk/v1/newsletter-preview',
   requestLocation: 'body',
   validateRequest: apiValidators.createRequest,
   validateResponse: apiValidators.createResponse,
